# android-lib-zipalign

./: CMakeLists.txt  Readme.md
android/core/src/libcutils/: loghack.c
include/: zipalign.h
zipalign/: ZipAlign.cpp
